# Pression

./: .gitexternals  .gitignore  .gitmodules  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  FindPackages.cmake  FindRequired.cmake  Pression.cmake  PressionCPack.cmake
doc/: CMakeLists.txt  Changelog.md  RelNotes.md
doc/feature/: Slicer.md  Zebra.md  cppPlugins.md
pression/: CMakeLists.txt  compressor.cpp  compressor.h  compressorInfo.h  compressorResult.h  dataCompressor.cpp  dataCompressor.h  dataCompressorInfo.h  decompressor.cpp  decompressor.h  downloader.cpp  downloader.h  files.cmake  log.h  plugin.cpp  plugin.h  pluginInstance.h  pluginRegistry.cpp  pluginRegistry.h  pluginVisitor.h  types.h  uploader.cpp  uploader.h
pression/compressor/: compressor.cpp  compressor.h  compressorFastLZ.cpp  compressorFastLZ.h  compressorLZF.cpp  compressorLZF.h  compressorRLE.ipp  compressorRLE10A2.cpp  compressorRLE10A2.h  compressorRLE4B.cpp  compressorRLE4B.h  compressorRLE4BU.cpp  compressorRLE4BU.h  compressorRLE4HF.cpp  compressorRLE4HF.h  compressorRLE565.cpp  compressorRLE565.h  compressorRLEB.cpp  compressorRLEB.h  compressorRLEYUV.cpp  compressorRLEYUV.h  compressorSnappy.cpp  compressorSnappy.h  compressorTurboJPEG.cpp  compressorTurboJPEG.h  compressorZSTD.cpp  compressorZSTD.h
pression/compressor/snappy/: snappy-stubs-internal.h
pression/data/: CMakeLists.txt  Compressor.cpp  Compressor.h  CompressorFastLZ.cpp  CompressorFastLZ.h  CompressorInfo.h  CompressorLZF.cpp  CompressorLZF.h  CompressorRLE.cpp  CompressorRLE.h  CompressorSnappy.cpp  CompressorSnappy.h  CompressorZSTD.cpp  CompressorZSTD.h  Registry.cpp  Registry.h  types.h
pression/data/fastlz/: 6pack.c  6unpack.c  fastlz.c  fastlz.h
pression/data/liblzf/: crc32.h  lzf.c  lzfP.h  lzf_c.c  lzf_d.c
pression/data/snappy/: snappy-sinksource.h
pression/plugins/: compressor.h  compressorTokens.h  compressorTypes.h
tests/: CMakeLists.txt  compressor.cpp  dataCompressor.cpp
tests/data/: Compressor.cpp
tests/perf/: dataCompressor.cpp
